# PredatorFreeNZ

./: .gitignore  LICENSE  README.md  pyproject.toml
taawharanui/: data_exploration.py
taawharanui/data/: manage_traps.csv
trap_analysis/: analysis.py  data_cleaning.py  plotter.py  render.py
